--- a/SoundSeer/Info.plist
+++ b/SoundSeer/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>SoundSeer uses AppleScript technology to communicate with Spotify.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 </dict>
