--- a/SoundSeer/SoundSeer.entitlements
+++ b/SoundSeer/SoundSeer.entitlements
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>com.apple.security.app-sandbox</key>
-        <true/>
-        <key>com.apple.security.automation.apple-events</key>
-        <true/>
-        <!-- https://developer.apple.com/library/archive/documentation/Miscellaneous/Reference/EntitlementKeyReference/Chapters/EnablingAppSandbox.html#//apple_ref/doc/uid/TP40011195-CH4-SW25 -->
-        <key>com.apple.security.scripting-targets</key>
-        <dict>
-            <key>com.spotify.client</key>
-            <array>
-                <string>com.spotify.playback</string>
-                <string>com.spotify.library</string>
-            </array>
-        </dict>
-        <key>com.apple.security.temporary-exception.apple-events</key>
-        <array>
-            <string>com.spotify.client</string>
-        </array>
-    </dict>
+<dict>
+    <!-- Required for app store -->
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+    <!-- Required for app store -->
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
+	<key>com.apple.security.scripting-targets</key>
+	<dict>
+		<key>com.spotify.client</key>
+		<array>
+			<string>com.spotify.playback</string>
+			<string>com.spotify.library</string>
+		</array>
+	</dict>
+</dict>
 </plist>
