--- a/SoundSeer/SoundSeer.entitlements
+++ b/SoundSeer/SoundSeer.entitlements
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>com.apple.security.app-sandbox</key>
-	<true/>
-	<key>com.apple.security.network.client</key>
-	<true/>
-	<key>com.apple.security.automation.apple-events</key>
-	<true/>
-</dict>
+    <dict>
+        <key>com.apple.security.app-sandbox</key>
+        <true/>
+        <key>com.apple.security.network.client</key>
+        <true/>
+        <key>com.apple.security.automation.apple-events</key>
+        <true/>
+        <key>com.apple.security.scripting-targets</key>
+        <dict>
+            <key>com.spotify.client</key>
+            <array>
+                <string>com.spotify.playback</string>
+                <string>com.spotify.library</string>
+            </array>
+        </dict>
+    </dict>
 </plist>
