--- a/SoundSeer.entitlements
+++ b/SoundSeer.entitlements
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>com.apple.security.app-sandbox</key>
-        <true/>
-        <key>com.apple.security.network.client</key>
-        <true/>
-        <key>com.apple.security.automation.apple-events</key>
-        <true/>
-        <key>com.apple.security.scripting-targets</key>
-        <dict>
-            <key>com.spotify.client</key>
-            <array>
-                <string>com.spotify.playback</string>
-                <string>com.spotify.library</string>
-            </array>
-        </dict>
-    </dict>
+<dict>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
+	<key>com.apple.security.scripting-targets</key>
+	<dict>
+		<key>com.apple.Music</key>
+		<array>
+			<string>com.apple.Music.user-interface</string>
+			<string>com.apple.Music.playback</string>
+			<string>com.apple.Music.library.read</string>
+			<string>com.apple.Music.library.read-write</string>
+		</array>
+		<key>com.spotify.client</key>
+		<array>
+			<string>com.spotify.playback</string>
+			<string>com.spotify.library</string>
+		</array>
+	</dict>
+</dict>
 </plist>
